--- a/html/static/style.css
+++ b/html/static/style.css
@@ -18,7 +18,6 @@
     --fourth-color: #f2f2f2f2;
 }
 
-
 p.names {
     font-family: 'Great Vibes';
     text-align: center;
@@ -51,6 +50,7 @@ h1 {
     font-size: 200%;
     color: var(--fourth-color);
 }
+
 hr {
     width:50%;
     margin:0 auto;
@@ -63,19 +63,31 @@ h2 {
 
 .banner {
     color: var(--fourth-color);
-    width: 60%;
     margin: 0px;
     padding: 20px;
-    padding-left: 20%;
-    padding-right: 20%;
     margin-bottom: 300px;
+}
+
+@media screen and (max-device-aspect-ratio: 1) {
+    .banner {
+        width: 90%;
+        padding-left: 5%;
+        padding-right: 5%;
+    }
+}
+
+@media screen and (min-device-aspect-ratio: 1) {
+    .banner {
+        width: 60%;
+        padding-left: 20%;
+        padding-right: 20%;
+    }
 }
 
 .banner-not-first {
     background-color: var(--primary-color);
 
 }
-
 
 .banner-first {
     background-color: var(--primary-color-no-alpha);
@@ -104,8 +116,6 @@ iframe {
     margin: 0 auto;
 }
 
-/* LIST #2 */
-/* #list { width:80%; } */
 #list ol { 
     font-style:italic;
     font-size: 150%;
@@ -124,4 +134,3 @@ iframe {
     margin-left: 10px;
 }
 #list ol li p em { display: block; }
-
