--- a/html/static/style.css
+++ b/html/static/style.css
@@ -69,7 +69,7 @@ h2 {
     margin-bottom: 300px;
 }
 
-@media screen and (max-device-aspect-ratio: 1) {
+@media screen and (max-device-width: 480px) {
     .banner {
         width: 80%;
         padding-left: 10%;
@@ -77,7 +77,7 @@ h2 {
     }
 }
 
-@media screen and (min-device-aspect-ratio: 1) {
+@media screen and (min-device-width: 480px) {
     .banner {
         width: 60%;
         padding-left: 20%;
@@ -105,7 +105,6 @@ h2 {
 }
 
 a.link, a.link:hover, a.link:focus, a.link:active {
-    text-decoration:none; 
     color: var(--third-color);
     font-weight: bold;
     text-decoration: underline;
@@ -128,10 +127,10 @@ iframe {
     color: var(--secondary-color); 
 }
 #list ol li {
-    margin-left: 25px;
+    margin-left: 30px;
 }
 #list ol li p {
-    padding:8px;
+    padding:12px;
     font-style:normal;
     font-size: 66%;
     color: var(--fourth-color);  
