--- a/html/static/style.css
+++ b/html/static/style.css
@@ -39,6 +39,8 @@ body {
     background-attachment: fixed;
     background-size: cover;
     background-position: center;
+    background-color: var(--primary-color-no-alpha);
+    transition: all 0.8s ease-in-out;
     padding: 0px;
     margin: 0px;
 }
