--- a/html/static/style.css
+++ b/html/static/style.css
@@ -28,6 +28,11 @@ p.title {
 body {
     font-family: 'Livvic';
     font-size: x-large;
+    padding: 0px;
+    margin: 0px;
+}
+
+.background {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
