--- a/html/static/style.css
+++ b/html/static/style.css
@@ -45,6 +45,8 @@ body {
 
 .img1 {
     background-image: url('images/img1.jpg');
+    background-size: 1024px;
+    -webkit-background-size: 2014px;
 }
 
 .img2 {
