--- a/html/static/style.css
+++ b/html/static/style.css
@@ -33,16 +33,31 @@ body {
 }
 
 .background {
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+    /* background-repeat: no-repeat; */
+    /* background-attachment: fixed; */
+    /* background-size: cover; */
+    /* background-position: center; */
     background-color: var(--primary-color-no-alpha);
-    background-size: 1024px;
-    -webkit-background-size: 2000px;
-    transition: all 0.8s ease-in-out;
+    /* background-size: 1024px; */
+    /* -webkit-background-size: 2000px; */
+    /* transition: all 0.8s ease-in-out; */
     padding: 0px;
     margin: 0px;
+}
+
+.background:after{
+    content:"";
+    position:fixed; /* stretch a fixed position to the whole screen */
+    top:0;
+    height:100vh; /* fix for mobile browser address bar appearing disappearing */
+    left:0;
+    right:0;
+    z-index:-1; /* needed to keep in the background */
+    background: url('images/img1.jpg') center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .img1 {
